Fixed scrollbar issue on the preview iframe

--- a/web/client/styles/main.css
+++ b/web/client/styles/main.css
@@ -179,7 +179,6 @@ img#console-ok {
   height: 100%;
   width: 100%;
   border: none;
-  overflow: scroll;
 }
 
 #console-out {
